--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de imagen de fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Quo nesciunt in sapiente ratione, 
+            placeat culpa harum quaerat consectetur illo fugit blanditiis assumenda labore, voluptates, aliquid nobis ab nam totam perferendis!</p>
+    </main>
 </body>
 </html>
