--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Test</title>
 </head>
 <body>
+    <style>
+        body
+        {
+            height: 100vh;
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        main
+        {
+            background-color: brown;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            border-radius: 15px;
+            border: 1px solid darkblue
+        }
+        h1
+        {
+            color: aqua;
+        }
+
+        p
+        {
+            color: azure;
+        }
+    </style>
     <main>
         <h1>Teste de imagen de fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
