--- a/fundo01.html
+++ b/fundo01.html
@@ -18,5 +18,10 @@
     <div class="quadrado" id="q3">
         
     </div>
+
+    <button>
+        <a href="/index.html">Home</a>
+    </button>
+    
 </body>
 </html>
