--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
             Quo nesciunt in sapiente ratione, 
             placeat culpa harum quaerat consectetur illo fugit blanditiis assumenda labore, voluptates, aliquid nobis ab nam totam perferendis!</p>
     </main>
+    <button>
+        <a href="/fundo01.html">Fundo</a>
+    </button>
+    
 </body>
 </html>
