--- a/fundo01.html
+++ b/fundo01.html
@@ -20,7 +20,7 @@
     </div>
 
     <button>
-        <a href="/index.html">Home</a>
+        <a href="/fundo02.html">Fundo 02</a>
     </button>
     
 </body>
