--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             placeat culpa harum quaerat consectetur illo fugit blanditiis assumenda labore, voluptates, aliquid nobis ab nam totam perferendis!</p>
     </main>
     <button>
-        <a href="/fundo01.html">Fundo</a>
+        <a href="/fundo01.html">Fundo 01</a>
     </button>
     
 </body>
