--- a/tabela.html
+++ b/tabela.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/tabela.css">
     <title>Tabela</title>
 </head>
 <body>
-    
+    <!--
+        Obs: Tabela não é para criar estrutura de um site
+    -->
+    <h1>Minha primeira Tabela</h1>
+    <!--
+        # HERARQUIA DE TABELAS
+        1 => table => (TABLE ROWS) -> Linhas de tabelas
+                    TABLE ROWS => (TABLE HEADER) -> Cabeçalho de tabela
+                        TABLE HEADER => (TABLE DATA) -> Dado de tabela
+
+
+     outra obs:
+     '</td> e </tr> não são por obrigação'                   
+
+    -->
+
+    <table>
+        <tr class="linha"> <!--TABLE ROWS 'primeira linha'-->
+            <td class="a1">A1</td><!--TABLE DATA 'Dado de tabela'-->
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+
+        <tr> <!--TABLE ROWS 'primeira linha'-->
+            <td>A2</td><!--TABLE DATA 'Dado de tabela'-->
+            <td>B2</td>
+            <td>C2</td>
+        </tr>
+
+        <tr> <!--TABLE ROWS 'primeira linha'-->
+            <td>A3</td><!--TABLE DATA 'Dado de tabela'-->
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
+
+        <tr> <!--TABLE ROWS 'primeira linha'-->
+            <td>A4</td><!--TABLE DATA 'Dado de tabela'-->
+            <td>B4</td>
+            <td>C4</td>
+        </tr>
+
+        <tr> <!--TABLE ROWS 'primeira linha'-->
+            <td>A5</td><!--TABLE DATA 'Dado de tabela'-->
+            <td>B5</td>
+            <td>C5</td>
+        </tr>
+    </table>
+
+
 </body>
 </html>
