--- a/tabela.html
+++ b/tabela.html
@@ -24,7 +24,7 @@
     -->
 
     <table>
-        <tr class="linha"> <!--TABLE ROWS 'primeira linha'-->
+        <tr> <!--TABLE ROWS 'primeira linha'-->
             <td class="a1">A1</td><!--TABLE DATA 'Dado de tabela'-->
             <td>B1</td>
             <td>C1</td>
@@ -33,13 +33,13 @@
         <tr> <!--TABLE ROWS 'primeira linha'-->
             <td>A2</td><!--TABLE DATA 'Dado de tabela'-->
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
 
         <tr> <!--TABLE ROWS 'primeira linha'-->
             <td>A3</td><!--TABLE DATA 'Dado de tabela'-->
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
 
         <tr> <!--TABLE ROWS 'primeira linha'-->
@@ -48,11 +48,7 @@
             <td>C4</td>
         </tr>
 
-        <tr> <!--TABLE ROWS 'primeira linha'-->
-            <td>A5</td><!--TABLE DATA 'Dado de tabela'-->
-            <td>B5</td>
-            <td>C5</td>
-        </tr>
+        
     </table>
 
 
