--- a/tabela01.html
+++ b/tabela01.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/tabela.css">
-    <title>Tabela</title>
+    <link rel="stylesheet" href="css/tabela01.css">
+    <title>Tabela 01</title>
 </head>
 <body>
     <!--
