--- a/tabela02.html
+++ b/tabela02.html
@@ -31,12 +31,45 @@
         <tbody>
             <tr>
                 <td>Ceara</td>
-                <td>8 452 381</td>
+                <td class="num">9 240 580</td>
+            </tr>
+
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 597 484</td>
+            </tr>
+
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46 649 132</td>
+            </tr>
+
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 411 923</td>
+            </tr>
+
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 463 349</td>
+            </tr>
+
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 985 284</td>
+            </tr>
+
+            <tr>
+                <td>Rio Grande Do Sul</td>
+                <td class="num">11 466 630</td>
             </tr>
         </tbody>
 
         <tfoot>
-
+            <tr>
+                <th>Total de Habitantes</th>
+                <td class="num"><strong>0000</strong></td>
+            </tr>
         </tfoot>
     </table>
 </body>
