--- a/tabela04.html
+++ b/tabela04.html
@@ -17,17 +17,48 @@
             <tr>
                 <th>Grupos</th>
                 <th>nomes</th>
-                <th>Filmes</th>
+                <th colspan="3">Filmes</th>
             </tr>
        </thead>
 
        <tbody>
             <tr>
-                <th>Mulheres</th>
+                <th rowspan="3">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
                 <td>Vigadores</td>
+            </tr>
+            <tr>
+                <td>Beatris souza</td>
+                <td>Huck</td>
+                <td>Inception</td>
+                <td>Batman</td>
+            </tr>
+            <tr>
+                <td>Claudia Mello</td>
+                <td>Oblivion</td>
+                <td>Matrix</td>
+                <td>Big Hero</td>
+            </tr>
+            <tr>
+                <th rowspan="3">Homens</th>
+                <td>Bruno Mendonça</td>
+                <td>Intocavel</td>
+                <td>Amnésia</td>
+                <td>Gradiador</td>
+            </tr>
+            <tr>
+                <td>Daniel Lourenço</td>
+                <td>Wall-E</td>
+                <td>Oldboy</td>
+                <td>Dangai</td>
+            </tr>
+            <tr>
+                <td>Fabiano Mota</td>
+                <td>Star Wars S</td>
+                <td>Taxi Driver</td>
+                <td>Toy Story</td>
             </tr>
        </tbody>
     </table>
