--- a/tabela04.html
+++ b/tabela04.html
@@ -15,16 +15,23 @@
 
        <thead>
             <tr>
-                <th>Grupos</th>
-                <th>nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupos</th>
+                <th scope="col">nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
        </thead>
+
+       <tfoot>
+           <tr>
+               <th colspan="4" scope="row">Total</th>
+               <td>1000</td>
+           </tr>
+       </tfoot>
 
        <tbody>
            
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -44,7 +51,7 @@
             </tr>
 
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocavel</td>
                 <td>Amnésia</td>
