--- a/tabela05.html
+++ b/tabela05.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/tabela04.css">
-    <title>Tabelas 04</title>
+    <title>Tabelas 05</title>
 </head>
 <body>
-    <h1>Exercicio de tabela 04</h1>
+    <h1>Exercicio de tabela 05</h1>
     <table>
        <caption>
             Filmes favoritos
        </caption> 
-
+       
        <thead>
             <tr>
-                <th scope="col">Grupos</th>
+                <th scope="col">Area</th>
                 <th scope="col">nomes</th>
                 <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
